[feat] : header input box check 시 body 의 모든 input box check 되는 함수 추가

--- a/src/main/resources/static/css/admin/contact/contacts.css
+++ b/src/main/resources/static/css/admin/contact/contacts.css
@@ -3,6 +3,16 @@
     overflow-x: auto;
 }
 
+.admin-contact-header a {
+    display: inline-block;
+    padding: 8px 14px;
+    border-radius: 6px;
+    height: 21.5px;
+    line-height: 21.5px;
+    margin-top: 10px;
+    font-size: 1rem;
+}
+
 .admin-contact-btn {
     background-color: rgb(225, 233, 249);
     color: #0273e6;
