--- a/src/main/resources/templates/admin/homeImage/delete.html
+++ b/src/main/resources/templates/admin/homeImage/delete.html
@@ -18,7 +18,7 @@
     <div class="divTable minimalistBlack">
       <div class="divTableHeading">
         <div class="divTableRow">
-          <div class="divTableHead del-chk-header"><input type="checkbox" /></div>
+          <div class="divTableHead del-chk-header"><input type="checkbox" onclick="toggleCheckbox(this)" /></div>
           <div class="divTableHead home-image-header">이미지</div>
           <div class="divTableHead home-image-title-header">제목</div>
           <div class="divTableHead home-image-reg-date-header">등록일자</div>
@@ -27,7 +27,7 @@
       </div>
       <div class="divTableBody">
         <div class="divTableRow" th:each="homeImage, itemStat : *{homeImageDeletionDtoList}">
-          <div class="divTableCell del-chk"><input type="checkbox" th:field="*{homeImageDeletionDtoList[__${itemStat.index}__].isDeleted}"></div>
+          <div class="divTableCell del-chk"><input type="checkbox" class="del-chk-box" th:field="*{homeImageDeletionDtoList[__${itemStat.index}__].isDeleted}"></div>
           <div class="divTableCell home-image"><img th:src="'/admin/home-images/display?fileName='+${homeImage.fileName}" /></div>
           <div class="divTableCell home-image-title" th:text="${homeImage.title}"></div>
           <div class="divTableCell home-image-reg-date" th:text="${homeImage.regDate}"></div>
