--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -2,7 +2,7 @@
 <html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
     <nav class="navbar" th:fragment="navbar">
         <div class="navbar-logo">
-            <a href="">CHOIMYEONGHEON</a>
+            <a href="/home">CHOIMYEONGHEON</a>
         </div>
         <ul class="navbar-menu">
             <li class="navbar-menu-works">
