--- a/src/main/resources/templates/admin/contact/contacts.html
+++ b/src/main/resources/templates/admin/contact/contacts.html
@@ -10,36 +10,39 @@
     <script src="/js/common.js" defer></script>
 </head>
 <div layout:fragment="admin-content" class="admin-contact-content">
-    <div class="admin-contact-header">
-        <div class="admin-contact-cnt">
-            <span class="not-read-cnt" th:text="${response.notReadContactCount}"></span>
-            <span> / </span>
-            <span class="read-cnt" th:text="${response.totalContactCount}"></span>
-        </div>
-        <div class="del-btn-container">
-            <button class="admin-content-header-del-btn">삭제</button>
-        </div>
-    </div>
-    <div class="divTable minimalistBlack">
-        <div class="divTableHeading">
-            <div class="divTableRow">
-                <div class="divTableHead del-chk-header"><input type="checkbox" onclick="toggleCheckbox(this)" /></div>
-                <div class="divTableHead contact-sender-header">보낸 사람</div>
-                <div class="divTableHead contact-sender-email-header">이메일</div>
-                <div class="divTableHead contact-title-header">제목</div>
-                <div class="divTableHead contact-date-header">일자</div>
+    <form th:action="@{/admin/contact}" th:object="${request}" th:method="delete" onsubmit="return deleteHandler()">
+        <div class="admin-contact-header">
+            <div class="admin-contact-cnt">
+                <span class="not-read-cnt" th:text="${response.notReadContactCount}"></span>
+                <span> / </span>
+                <span class="read-cnt" th:text="${response.totalContactCount}"></span>
+            </div>
+            <div class="del-btn-container">
+                <button class="admin-content-header-del-btn">삭제</button>
             </div>
         </div>
-        <div class="divTableBody">
-            <div class="divTableRow" th:each="contact : ${response.contactDtoList}"
-                 th:onclick="|rowClick(event, '${contact.id}')|" th:classappend="${contact.readYn == 'Y' ? 'read' : 'not-read'}">
-                <div class="divTableCell del-chk"><input type="checkbox" class="del-chk-box"></div>
-                <div class="divTableCell contact-sender" th:text="${contact.senderName}"></div>
-                <div class="divTableCell contact-sender-email" th:text="${contact.senderEmail}"></div>
-                <div class="divTableCell contact-title" th:text="${contact.subject}"></div>
-                <div class="divTableCell contact-date" th:text="${contact.createdAt}"></div>
+        <div class="divTable minimalistBlack">
+            <div class="divTableHeading">
+                <div class="divTableRow">
+                    <div class="divTableHead del-chk-header"><input type="checkbox" onclick="toggleCheckbox(this)" /></div>
+                    <div class="divTableHead contact-sender-header">보낸 사람</div>
+                    <div class="divTableHead contact-sender-email-header">이메일</div>
+                    <div class="divTableHead contact-title-header">제목</div>
+                    <div class="divTableHead contact-date-header">일자</div>
+                </div>
+            </div>
+            <div class="divTableBody">
+                <div class="divTableRow" th:each="contact, itemStat : *{contactDtoList}"
+                     th:onclick="|rowClick(event, '${contact.id}')|" th:classappend="${contact.readYn == 'Y' ? 'read' : 'not-read'}">
+                    <div class="divTableCell del-chk"><input type="checkbox" class="del-chk-box" th:field="*{contactDtoList[__${itemStat.index}__].isDeleted}"></div>
+                    <div class="divTableCell contact-sender" th:text="${contact.senderName}"></div>
+                    <div class="divTableCell contact-sender-email" th:text="${contact.senderEmail}"></div>
+                    <div class="divTableCell contact-title" th:text="${contact.subject}"></div>
+                    <div class="divTableCell contact-date" th:text="${contact.createdAt}"></div>
+                    <input type="hidden" th:field="*{contactDtoList[__${itemStat.index}__].id}">
+                </div>
             </div>
         </div>
-    </div>
+    </form>
 </div>
 </html>
