--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -10,13 +10,7 @@
                 <ul class="navbar-dropdown-submenu">
                     <li><a href="/works/all">All</a></li>
                     <li class="navbar-dropdown-submenu-separator">|</li>
-                    <li><a href="/works/2018">2018</a></li>
-                    <li><a href="/works/2019">2019</a></li>
-                    <li><a href="/works/2020">2020</a></li>
-                    <li><a href="/works/2021">2021</a></li>
-                    <li><a href="/works/2022">2022</a></li>
-                    <li><a href="/works/2023">2023</a></li>
-                    <li><a href="/works/2024">2024</a></li>
+                    <li th:each="wy : ${workYears}"><a th:href="@{/works/}" href="/works/2018" th:text="${wy.year}">2018</a></li>
                 </ul>
             </li>
             <li><a href="/profiles" class="nav-profiles">Profile</a></li>
