--- a/src/main/resources/static/css/admin/work/works.css
+++ b/src/main/resources/static/css/admin/work/works.css
@@ -5,6 +5,16 @@
     border-radius: 4px;
 }
 
+.work-year-btn {
+    margin-left: auto;
+    margin-right: 10px;
+}
+
+.work-year-del-btn {
+    margin-right: 10px;
+    margin-left: 10px;
+}
+
 .divTableHeading .divTableRow .del-chk-header {
     width: 50px;
 }
