--- a/src/main/resources/templates/admin/workyear/save.html
+++ b/src/main/resources/templates/admin/workyear/save.html
@@ -17,7 +17,7 @@
         <div class="work-year-save-container" id="work-year-save-container">
             <div class="work-year-save-form">
                 <label for="work-year" class="input-label">Year</label>
-                <input id="work-year" type="number" min="2015" th:field="*{workYearDtoList[0].workYear}" class="form-control" placeholder="Year" required>
+                <input id="work-year" type="number" min="2015" th:field="*{workYearDtoList[0].year}" class="form-control" placeholder="Year" required>
             </div>
             <div class="submit-btn-wrapper">
                 <a class="before-btn" href="/admin/works">이전</a>
