--- a/src/main/resources/templates/admin/profile/profiles.html
+++ b/src/main/resources/templates/admin/profile/profiles.html
@@ -15,8 +15,9 @@
     <a href="/admin/profile/delete-form/all" class="admin-content-header-del-btn">삭제</a>
     <select name="workDate" class="admin-content-header-select" id="profile-type-select" onchange="sendGetRequest()">
       <option th:selected="All == ${selectedType}" value="All">All</option>
-      <option th:each="profileType : ${profileTypes}" th:text="${profileType.type}" th:selected="${profileType.lowerCase} == ${selectedType}" th:value="${profileType.lowerCase}">2018</option>
+      <option th:each="profileType : ${profileTypes}" th:text="${profileType.type}" th:selected="${profileType.id} == ${selectedType}" th:value="${profileType.id}">수상</option>
     </select>
+    <a href="/admin/profile-type" class="admin-content-header-save-btn profile-type-btn">타입 관리</a>
   </div>
   <div class="divTable minimalistBlack">
     <div class="divTableHeading">
