[feat] : ProfileType En 추가

--- a/src/main/resources/static/css/admin/profile/profileType.css
+++ b/src/main/resources/static/css/admin/profile/profileType.css
@@ -16,6 +16,7 @@
     width: calc(100% - 20px);
     margin-top: 10px;
     margin-bottom: 15px;
+    border-bottom: 1px solid var(--admin-border-color);
 }
 
 .form-control {
@@ -34,4 +35,12 @@
 .form-control:focus {
     outline: none;
     border: 1px solid rgb(37, 147, 255);
+}
+
+.type-en-label {
+    margin-top: 10px;
+}
+
+.type-en-input {
+    margin-bottom: 25px;
 }
