--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -23,7 +23,7 @@
             </li>
         </ul>
         <ul class="navbar-icons">
-            <li><i class="fa-brands fa-instagram"></i></li>
+            <li class="li-fa-instagram"><i class="fa-brands fa-instagram"></i></li>
             <li><i class="fa-solid fa-magnifying-glass"></i></li>
         </ul>
         <a href="#" class="navbar-toogleBtn"><i class="fas fa-bars"></i></a>
