--- a/src/main/resources/static/css/works.css
+++ b/src/main/resources/static/css/works.css
@@ -34,6 +34,12 @@
     width: 100%;
     display: block;
     aspect-ratio: 1/1;
+    opacity: 0;
+    transition: opacity 0.7s ease-in-out;
+}
+
+.work-img-container > img.loaded {
+    opacity: 1;
 }
 
 .work-info {
