[feat] : UI - admin container min-width 설정 및 flex shrink 설정

--- a/src/main/resources/static/css/admin/contact/contacts.css
+++ b/src/main/resources/static/css/admin/contact/contacts.css
@@ -1,7 +1,7 @@
-.admin-container {
-    min-width: 1300px;
-    overflow-x: auto;
-}
+/*.admin-container {*/
+/*    min-width: 1300px;*/
+/*    overflow-x: auto;*/
+/*}*/
 
 .admin-contact-header {
     display: flex;
