[feat] : UI - contact 화면 max-width 설정

--- a/src/main/resources/templates/contact.html
+++ b/src/main/resources/templates/contact.html
@@ -9,19 +9,19 @@
 <div layout:fragment="content">
   <form th:action="@{/contact}" th:object="${request}" method="post">
     <div class="contact-container">
-      <div>
+      <div class="contact-item">
         <label for="contact-name" class="input-label">Name</label>
         <input id="contact-name" type="text" class="form-control" placeholder="Name" th:field="*{senderName}" required>
       </div>
-      <div>
+      <div class="contact-item">
         <label for="contact-email" class="input-label">Email</label>
         <input id="contact-email" type="email" class="form-control" placeholder="Email" th:field="*{senderEmail}" required>
       </div>
-      <div>
+      <div class="contact-item">
         <label for="contact-subject" class="input-label">Subject</label>
         <input id="contact-subject" type="text" class="form-control" placeholder="Subject" th:field="*{subject}" required>
       </div>
-      <div>
+      <div class="contact-item">
         <label for="contact-content" class="input-label">Content</label>
         <textarea id="contact-content" cols="30" rows="10" class="textarea-control" th:field="*{content}" required></textarea>
       </div>
