--- a/src/main/resources/static/css/contact.css
+++ b/src/main/resources/static/css/contact.css
@@ -1,10 +1,14 @@
 .contact-container {
     padding: 8px 12px;
-    width: 700px;
+    max-width: 700px;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
     gap: 20px;
+}
+
+.contact-item {
+    width: 100%;
 }
 
 .nav-contact {
