--- a/src/main/resources/static/css/profiles.css
+++ b/src/main/resources/static/css/profiles.css
@@ -1,47 +1,69 @@
-.profile-list-container {
-    padding: 8px 12px;
-    margin: 0 40px;
-    max-width: 1536px;
+.container {
+    max-width: 1000px;
+    /*margin: 40px 40px 0 40px;*/
+    margin: 40px auto 0 auto;
+    padding: 8px 24px;
+}
+
+.type-container {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 3.75rem;
+}
+
+.type-header {
+    font-size: 1.8rem;
+    padding-bottom: 0.3rem;
+    border-bottom: 1px solid black;
 }
 
 .profile-container {
     display: flex;
-    justify-content: space-between;
-    margin-bottom: 50px;
+    padding-top: 1.5rem;
+    font-size: 1rem;
 }
 
-.profile-kr, .profile-en {
-    width: 45%;
-}
-
-.profile-wrapper {
+.profile-container-kr,
+.profile-container-en {
     display: flex;
-    gap: 20px;
-    margin-bottom: 7px;
+    flex-direction: column;
+    width: 50%;
+}
+
+.profile-container-en {
+    display: flex;
+    width: 50%;
+}
+
+.profile-content-container {
+    display: flex;
 }
 
 .profile-year {
-    width: 100px;
+    width: 120px;
+    flex-shrink: 0;
 }
 
-.nav-profiles {
-    color: var(--accent-color);
+.profile-year {
+    padding-bottom: 0.25rem;
 }
 
-@media screen and (max-width: 768px) {
-    .profile-list-container {
-        margin: 0;
-    }
-}
-
-@media screen and (max-width: 380px) {
-    .profile-list-container {
-        margin: 0;
-    }
+.profile-content {
+    padding-bottom: 0.25rem;
 }
 
 @media screen and (min-width: 1600px) {
-    .profile-list-container {
+    .container {
         margin: 0 auto;
+    }
+}
+
+@media screen and (max-width: 1050px) {
+    .profile-container-kr {
+        width: 100%;
+    }
+
+    .profile-container-en {
+        display: none;
     }
 }
