--- a/src/main/resources/templates/admin/profile/profiles.html
+++ b/src/main/resources/templates/admin/profile/profiles.html
@@ -12,6 +12,7 @@
   <div class="admin-content-header">
     <!-- <h3>현재 저장된 홈 이미지 (1)</h3> -->
     <a href="/admin/profile/save-form" class="admin-content-header-save-btn">저장</a>
+    <a href="/admin/profile/from-to/save-form" class="admin-content-header-save-btn">from-to 저장</a>
     <a href="/admin/profile/delete-form/all" class="admin-content-header-del-btn">삭제</a>
     <select name="workDate" class="admin-content-header-select" id="profile-type-select" onchange="sendGetRequest()">
       <option th:selected="All == ${selectedType}" value="All">All</option>
