--- a/src/main/resources/templates/admin/profile/save.html
+++ b/src/main/resources/templates/admin/profile/save.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/css/admin/profile/save.css" />
 </head>
 <div layout:fragment="admin-content">
-    <form th:action="@{/admin/profile}" th:object="${request}" method="post">
+    <form th:action="@{/admin/profile/normal}" th:object="${request}" method="post">
         <div class="profile-save-container">
             <div class="profile-save-form">
                 <label for="profile-type" class="input-label">Type</label>
