--- a/src/main/resources/templates/admin/profile/from-to-update.html
+++ b/src/main/resources/templates/admin/profile/from-to-update.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="/css/admin/profile/save.css" />
 </head>
 <div layout:fragment="admin-content">
-  <form th:action="@{/admin/profile/normal}" th:object="${request}" th:method="put">
+  <form th:action="@{/admin/profile/from-to}" th:object="${request}" th:method="put">
     <div class="profile-save-container">
       <div class="profile-save-form">
         <label for="profile-type" class="input-label">Type</label>
@@ -17,8 +17,12 @@
         </select>
       </div>
       <div class="profile-save-form">
-        <label for="profile-year" class="input-label">Year</label>
-        <input id="profile-year" type="number" min="2015" th:field="*{year}" class="form-control" placeholder="Year">
+        <label for="profile-from-year" class="input-label">From Year</label>
+        <input id="profile-from-year" type="number" min="2015" th:field="*{fromYear}" class="form-control" placeholder="From Year">
+      </div>
+      <div class="profile-save-form">
+        <label for="profile-to-year" class="input-label">To Year</label>
+        <input id="profile-to-year" type="number" min="2015" th:field="*{toYear}" class="form-control" placeholder="To Year">
       </div>
       <div class="profile-save-form">
         <label for="profile-content" class="input-label">Content</label>
@@ -28,6 +32,7 @@
         <label for="profile-content-en" class="input-label">Content(En)</label>
         <input id="profile-content-en" type="text" class="form-control" th:field="*{contentEn}" placeholder="Content(En)">
         <input type="hidden" th:field="*{id}">
+        <input type="hidden" th:field="*{year}">
       </div>
       <div class="submit-btn-wrapper">
         <a class="before-btn" href="/admin/profile/all">이전</a>
