--- a/src/main/resources/templates/admin/profile/profiles.html
+++ b/src/main/resources/templates/admin/profile/profiles.html
@@ -12,7 +12,7 @@
   <div class="admin-content-header">
     <!-- <h3>현재 저장된 홈 이미지 (1)</h3> -->
     <a href="/admin/profile/save-form" class="admin-content-header-save-btn">저장</a>
-    <a href="/admin/profile/from-to/save-form" class="admin-content-header-save-btn">from-to 저장</a>
+    <a href="/admin/profile/from-to/save-form" class="admin-content-header-save-btn" style="margin-left: 0px">from-to 저장</a>
     <a href="/admin/profile/delete-form/all" class="admin-content-header-del-btn">삭제</a>
     <select name="workDate" class="admin-content-header-select" id="profile-type-select" onchange="sendGetRequest()">
       <option th:selected="All == ${selectedType}" value="All">All</option>
@@ -32,7 +32,10 @@
     </div>
     <div class="divTableBody">
       <div class="divTableRow" th:each="profile : ${profiles}">
-        <div class="divTableCell update-btn-wrapper"><a class="update-btn" th:href="@{/admin/profile/update-form/{id}(id=${profile.id})}">수정</a></div>
+        <div class="divTableCell update-btn-wrapper">
+          <a class="update-btn" th:href="@{/admin/profile/update-form/{id}(id=${profile.id})}" th:if="${profile.profileSprCd == 'NORMAL'}">수정</a>
+          <a class="update-btn" th:href="@{/admin/profile/from-to/update-form/{id}(id=${profile.id})}" th:if="${profile.profileSprCd == 'FROM_TO'}">수정</a>
+        </div>
         <div class="divTableCell profile-type" th:text="${profile.profileType}"></div>
         <div class="divTableCell profile-year" th:text="${profile.year}"></div>
         <div class="divTableCell profile-content" th:text="${profile.content}"></div>
