[feat] : ProfileType 수정 로직 및 UI 구현

--- a/src/main/resources/static/css/admin/profile/profileType.css
+++ b/src/main/resources/static/css/admin/profile/profileType.css
@@ -11,12 +11,16 @@
 }
 
 .profile-type-save-form {
+    border-bottom: 1px solid var(--admin-border-color);
+}
+
+.profile-type-save-form,
+.profile-type-update-form {
     display: flex;
     flex-direction: column;
     width: calc(100% - 20px);
     margin-top: 10px;
     margin-bottom: 15px;
-    border-bottom: 1px solid var(--admin-border-color);
 }
 
 .form-control {
