[feat] : ProfileType 우선순위 필드 추가

--- a/src/main/resources/static/css/admin/profile/profiles.css
+++ b/src/main/resources/static/css/admin/profile/profiles.css
@@ -41,6 +41,10 @@
     word-break: break-all;
 }
 
+.divTableBody .divTableRow .profile-priority {
+    width: 80px;
+}
+
 .profile-type-before-btn {
     margin-left: 10px;
 }
